[package]
name = "DioxusTest"
version = "0.1.0"
authors = ["yhanyi <yeohhanyi0916@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
